add wallet info